Exercise 2/Solutions/updated_gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1alpha3","kind":"Gateway","metadata":{"annotations":{},"name":"kubeflow-gateway","namespace":"kubeflow"},"spec":{"selector":{"istio":"ingressgateway"},"servers":[{"hosts":["*"],"port":{"name":"http","number":80,"protocol":"HTTP"}}]}}
  creationTimestamp: "2023-04-05T18:44:35Z"
  generation: 1
  name: kubeflow-gateway
  namespace: kubeflow
  resourceVersion: "64746"
  uid: 4bb3c476-556b-4e15-b2a4-4c714a40658a
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
        name: http
        number: 80
        protocol: HTTP
    # Upgrade HTTP to HTTPS
    tls:
        httpsRedirect: true
  - hosts:
    - '*'
    port:
        name: https
        number: 443
        protocol: HTTPS
    tls:
        mode: SIMPLE
        privateKey: /etc/istio/ingressgateway-certs/tls.key
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
